branches/wip/Archive/bdca3ad69288824b6bbffba2ad15ab7a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:1:16: error: 'void A::foo()' is private
 class A { void foo(); };
                ^
main.cpp:3:7: error: within this context
 class B : private A { ::A A; public: using A::foo; };
       ^
